Fixed Bismarck Image not showing

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body{
   border: 2px;
   border-style: solid;
   border-color: brown;
-  margin: 10px;
+  width: 90%;
 }
 .active{
   background-color: #4acb13;
@@ -131,4 +131,19 @@ body{
   padding-top: 50px;
   padding-left: 5%;
 
+}
+.Ships div{
+  display: flex;
+  position:relative;
+  height: auto;
+  width:auto;
+  align-items:center;
+  margin: 0 auto;
+  justify-content: center;
+  flex-direction: column;
+
+}
+.Ships div>img{
+  width: 90%;
+  height: 90%;
 }
